src/objects/Glxy_FMISVATObligation__c.object
<CustomObject>
    <description>FMIS VAT OBLIGATION</description>
    <fields>
        <fullName>ACTG_PERIOD__c</fullName>
        <label>ACTG PERIOD</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMT__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BUDGET_ACTVTY_CD__c</fullName>
        <label>BUDGET ACTVTY CODE</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DESCRIPTION__c</fullName>
        <label>DESCRIPTION</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DTYP__c</fullName>
        <label>DTYP</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FUNC_CD__c</fullName>
        <label>Function CODE</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FUND_CD__c</fullName>
        <label>FUND Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function_Name__c</fullName>
        <label>Function Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEASE_NO__c</fullName>
        <label>LEASE NUMBER</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PEG_DOC_NUM__c</fullName>
        <label>PDN</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REGION_CD__c</fullName>
        <label>REGION CODE</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SEQ_NO__c</fullName>
        <label>SEQUENCE NO</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TITLE__c</fullName>
        <label>TITLE</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TT__c</fullName>
        <label>TT</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <label>FMIS VAT Obligation</label>
    <nameField>
        <label>FMISVATObligation</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FMIS VAT OBLIGATION</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>